test/conformance/chainsaw/hooks/post-upgrade/clean-reports/crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: foos.example.com
spec:
  group: example.com
  versions:
    - name: v1
      served: true
      storage: true
      schema:
        openAPIV3Schema:
          type: object
          properties:
            spec:
              type: object
              properties:
                message:
                  type: string
  scope: Cluster
  names:
    plural: foos
    singular: foo
    kind: Foo
    shortNames:
      - f
