test/conformance/chainsaw/hooks/post-upgrade/clean-reports/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
