test/conformance/chainsaw/hooks/post-upgrade/clean-reports/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test
spec:
  containers:
  - name: test
    image: busybox
